--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@paypal/react-paypal-js": "^7.8.1",
     "babel-plugin-macros": "^3.1.0",
+    "dotenv": "^16.0.3",
+    "dotenv-webpack": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
